io-takamaka-examples/src/main/java/io/takamaka/tests/errors/illegalexceptionhandler6/MyUncheckedException.java
package io.takamaka.tests.errors.illegalexceptionhandler6;

public class MyUncheckedException extends RuntimeException {
	private static final long serialVersionUID = 1L;
}